# online-snake-tui

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: lint.yaml
client/: __init__.py  __main__.py  game.py  level.py  models.py  networking.py  save.json
common/: __init__.py  config.py  logic.py  models.py
server/: __init__.py  __main__.py
src/: __init__.py  __main__.py
